--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,9 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_tasks">Tasks</string>
+    <string name="menu_tasks">Список</string>
+    <string name="menu_calendar">Календарь</string>
+    <string name="menu_archive">Архив</string>
     <string name="add_task_title">Add Task</string>
     <string name="new_task_hint">Новая задача</string>
     <string name="add">Add</string>
@@ -37,4 +39,18 @@
     <string name="created_at_label">Создано: %1$s</string>
     <string name="add_task_cta">Добавить</string>
     <string name="subtasks_header">Подзадачи</string>
+    <string name="calendar_week_title">Неделя: %1$s–%2$s</string>
+    <string name="calendar_day_title">День: %1$s</string>
+    <string name="calendar_today">Сегодня</string>
+    <string name="calendar_prev">Предыдущая</string>
+    <string name="calendar_next">Следующая</string>
+    <string name="calendar_week_mode">Неделя</string>
+    <string name="calendar_day_mode">День</string>
+    <string name="calendar_no_tasks">Нет задач в выбранном диапазоне</string>
+    <string name="calendar_empty_day">Нет задач</string>
+    <string name="archive_filter_done_only">Только выполненные</string>
+    <string name="archive_filter_all">Всё прошлое</string>
+    <string name="archive_empty">В архиве пока нет задач</string>
+    <string name="archive_title">Архив</string>
+    <string name="calendar_title">Календарь</string>
 </resources>
